# Flower-Classification-using-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
